262_aks_agc_tf/kubernetes/1-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inspectorgadget
  labels:
    app: inspectorgadget
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inspectorgadget
  template:
    metadata:
      labels:
        app: inspectorgadget
    spec:
      containers:
      - name: inspectorgadget
        image: ghcr.io/jelledruyts/inspectorgadget:latest
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: inspectorgadget
spec:
  selector:
    app: inspectorgadget
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
